# halo2ecc-o

./: Cargo.toml  LICENSE
src/: circuit.rs  lib.rs  range_info.rs  util.rs
src/circuit/: assign.rs  chips.rs  context.rs  gates.rs
src/circuit/chips/: bit_chip.rs  ecc_chip.rs  int_chip.rs  keccak_chip.rs  msm_chip.rs  native_chip.rs  pairing_chip.rs
src/circuit/chips/pairing_chip/: bls12_381.rs  bn256.rs  bn256_constants.rs  fq.rs
src/circuit/gates/: int_mul_gate.rs  kvmap_gate.rs  plonk_gate.rs  range_gate.rs
