[package]
name = "halo2ecc-o"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Ooglayout"]

[dependencies]
ark-std = { version = "0.4.0" }
halo2_proofs = { git = "https://github.com/DelphinusLab/halo2-gpu-specific.git", tag = "stable-logup-shuffle-v1.0.0", default-features = true}
lazy_static = "1.4.0"
num-integer = "0.1"
num-bigint = { version = "0.4.5", features = ["rand"] }
num-traits = "0.2.18"
rayon = "1.5.2"

[dev-dependencies]
chrono = "0.4.19"
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
rand_xorshift = "0.3"
zkwasm-prover = { git = "https://github.com/DelphinusLab/zkWasm-prover", branch = "moore/logup-shuffle-oogl-rebase" }

[features]
default = []
cuda = ["halo2_proofs/cuda"]
profile = ["ark-std/print-trace", "halo2_proofs/profile"]
